[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-limiter>=3.12",
    "flask[async]>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "motor>=3.7.1",
    "pymongo>=4.14.0",
    "pyrogram>=2.0.106",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
    "youtube-search-python>=1.6.6",
    "yt-dlp>=2025.8.11",
    "aiohttp>=3.12.15",
]
